--- a/src/main/resources/templates/user/test.html
+++ b/src/main/resources/templates/user/test.html
@@ -52,6 +52,28 @@
             <li><img alt="categoriesI" class="categoriesI" th:src="@{images/Categories.svg}"  src="../../static/images/Categories.svg" >
                 Categories
                 <img alt="DropDownIcon" class="DropDownIcon" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
+                <ol>
+                    <li>
+                        <img alt="substance" class="substance" th:src="@{https://i.imgur.com/zphkXzb.png}" src="https://i.imgur.com/zphkXzb.png">
+                        First dishes
+                    </li>
+                    <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
+                        Main dishes</li>
+                    <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
+                        Salads</li>
+                    <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/PastryI.svg" >
+                        Pastry</li>
+                    <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >
+                        Desserts</li>
+                    <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >
+                        Drinks</li>
+                    <li><img alt="snackI" class="snackI" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
+                        Snacks</li>
+                    <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >
+                        Fish dishes</li>
+                    <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/SauceSelection.svg" >
+                        Sauces</li>
+                </ol>
             </li>
             <hr>
             <li><img alt="timeI" class="timeI" th:src="@{images/Time.svg}" src="../../static/images/Time.svg" >
