--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -347,7 +347,7 @@ body {
     width: 46.875vw;
     height: 33.2vh;
     margin-left: 2.0834vw;
-    margin-top: 39.4vh;
+    top: 60vh;
     background: #F2E3B3;
     border-radius: 5vh;
 }
