--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -68,6 +68,10 @@ body {
     padding-left: 1vw;
 }
 
+input {
+    autocomplete: off;
+}
+
 .magnifier{
     height: 3.3333333333vh;
     width: 1.875vw;
