--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -111,13 +111,11 @@
             <p class="iTitle sbsTitle">Step-by-step instructions</p>
         </div>
     </div>
-    <div class="addRatingField">
 
-    <div class="ratingField">
-    </div>
+
+    <div class="ratingField"> </div>
         <div class="confirmation">
             <img th:src="@{../images/tick.svg}" src="../../static/images/tick.svg" alt = "quill" class = "tick">
-    </div>
     </div>
 </main>
 
