--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -205,7 +205,7 @@ body {
     position: absolute;
     width: 10vw;
     height: 5.556vh;
-    margin-top: 0.5vh;
+    top: 21.5vh;
     margin-left: 4vw;
 }
 
@@ -337,18 +337,16 @@ body {
 
 .commentField{
     position: absolute;
-    display: flex;
     width: 46.875vw;
     height: 33.2vh;
     margin-left: 2.0834vw;
-    margin-top: 39.4vh;
+    top: 59.4vh;
     background: #F2E3B3;
     border-radius: 5vh;
 }
 
 .comment{
     position: absolute;
-    display: flex;
     width: 42.9vw;
     height: 11.5vh;
     margin-left: 2.0834vw;
@@ -368,7 +366,7 @@ body {
     position: absolute;
     width: 46.875vw;
     height: 63vh;
-    margin-top: 1.8vh;
+    top: 22.8vh;
     margin-left: 51.0834vw;
     background: #F2E3B3;
     border-radius: 5vh;
@@ -376,7 +374,7 @@ body {
 
 .fullRecipeHeader{
     width: 46.875vw;
-    height: 4.875vh;
+    height: 4.877vh;
     background: #3E5902;
     border-radius: 5vh 5vh 0vh 0vh ;
 }
@@ -451,7 +449,8 @@ body {
     height: 5.556vh;
     background: #3E5902;
     border-radius: 5vh;
-    margin-top: 67vh;
+    margin-top: 50vh;
+    bottom: 15vh;
     margin-left: 51.2vw;
 }
 .addRating{
@@ -459,7 +458,7 @@ body {
     width: 46.875vw;
     height: 9.5vh;
     background: none;
-    margin-top: 64.2vh;
+    bottom: 4.2vh;
     margin-left: 51.25vw;
     background: #F2B705;
 }
@@ -471,7 +470,7 @@ body {
     border-radius: 50vh;
     background: #F2B705;
     margin-left: 95vw;
-    margin-top: -5.6vh;
+    top: 87.6vh;
 }
 
 .tick{
