--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -92,12 +92,12 @@ input {
     text-decoration: none;
 }
 
-.heart, .user .userL{
+.heart img, .user img{
     width: 3.6458vw;
     height: 5.5555vh;
 }
 
-.heart-container, .user-container {
+.heart-container, .user-container, .heart-login-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,17 +108,14 @@ input {
     background-color: #F2E3B3;
 }
 
-.user-container:hover {
+.user-container:hover, .heart-container:hover {
     background-color: #733506;
     width: 4.6vw;
     height: 9.2593vh;
 }
 
-.heart-container:hover {
-    background-color: #733506;
-    width: 4.6vw;
-    height: 9.2593vh;
-    cursor: not-allowed;
+.heart-login-container:hover{
+    background-color: #B90F0F;
 }
 
 .home{
