--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -322,7 +322,6 @@ body {
     width: 6.5vw;
     height: 5.556vh;
     margin-left: 39.2vw;
-    top: 0vh;
     background-color:  #F28705;
     border-radius: 5vh;
 }
@@ -346,7 +345,7 @@ body {
     width: 46.875vw;
     height: 33.2vh;
     margin-left: 2.0834vw;
-    top: 59.4vh;
+    top: 57vh;
     background: #F2E3B3;
     border-radius: 5vh;
 }
@@ -373,7 +372,7 @@ body {
     position: absolute;
     width: 46.875vw;
     height: 63vh;
-    margin-top: 1.8vh;
+    top: 22.8vh;
     margin-left: 51.0834vw;
     background: #F2E3B3;
     border-radius: 5vh;
@@ -417,34 +416,27 @@ body {
     width: 12.6vw;
     height: 3.7vh;
     background: #F2B705;
-    border-radius: 5vh 5vh 0vh 0vh ;
-}
-
-.iTitle{
-    position: absolute;
+    border-radius: 5vh 5vh 0 0;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.5vw; /*48*/
-    font-size: 2.5vh;
-    top: 4.6vh;
-    margin-left: 1.7vw;
-    color: black;
+    font-size: 1.5vw;
+    text-align: center;
 }
 
-.devisesHeader{
+.devicesHeader{
     margin-top: 30vh;
-    border-radius: 0vh;
+    border-radius: 0;
+}
+
+.stepByStepHeader{
+    left: 68.075vw;
+    top: 29.39vh;
+    width: 27.8645vw;
+    text-align: center;
 }
 
 .dTitle{
     top: 38.5vh;
     margin-left: 4.5vw;
-}
-
-.stepByStepHeader{
-    width: 27.8645vw;
-    height: 3.7vh;
-    background: #F2B705;
-    border-radius: 5vh 5vh 0vh 0vh ;
 }
 
 .sbsTitle {
@@ -456,7 +448,7 @@ body {
     height: 5.556vh;
     background: #3E5902;
     border-radius: 5vh;
-    margin-top: 67vh;
+    margin-top: 70vh;
     margin-left: 51.2vw;
 }
 .addRating{
@@ -464,7 +456,7 @@ body {
     width: 46.875vw;
     height: 9.5vh;
     background: none;
-    margin-top: 64.2vh;
+    bottom: 4.2vh;
     margin-left: 51.25vw;
     background: #F2B705;
 }
@@ -476,7 +468,7 @@ body {
     border-radius: 50vh;
     background: #F2B705;
     margin-left: 95vw;
-    margin-top: -5.6vh;
+    top: 87.6vh;
 }
 
 .tick{
@@ -544,26 +536,26 @@ body {
 .window {
     position: fixed;
     display: none;
-    bottom: 100px;
-    left: 5%;
-    width: 1140px;
-    height: 465px;
+    bottom: 9.2593vh;
+    left: 9.6vh;
+    width: 59.375vw;
+    height: 43.056vh;
     background: #F2E3B3;
-    padding: 20px;
+    padding: 0.02vw;
     z-index: 11;
-    border-radius: 60px;
+    border-radius: 5.5vh;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 .inner-window {
     background: #FBEFC7;
     position: absolute;
-    width: 1060px;
-    height: 345px;
-    left: 41px;
-    top: 38px;
-    padding-left: 10px;
-    border-radius: 30px;
+    width: 55.2083vw;
+    height: 31.945vh;
+    left: 2.1354167vw;
+    top: 3.5185vh;
+    padding-left: 0.01vw;
+    border-radius: 2.25vh;
     z-index: 13;
 }
 
@@ -576,7 +568,6 @@ body {
     border-radius: 2.7vw;
     text-align: center;
     font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
     font-size: 1.25vw;
     color: #FBEFC7;
     border: none;
@@ -665,7 +656,6 @@ body {
     height: 3vh;
     margin: auto;
     font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
     font-size: 1.25vw;
     font-weight: 400;
     line-height: 1vh;
@@ -714,12 +704,15 @@ body {
 }
 
 .amountContent {
-    padding-left: 10px;
+    padding-left: 0.52vw;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.3vw;
+    text-align: center;
 }
 
 .ingredientContent {
-    padding-left: 400px;
-    font-size: 24px;
+    padding-left: 15.46vw;
+    font-size: 1.5vw;
     color: black;
 }
 
