--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -106,13 +106,15 @@
         <div class="IngredientTagsTitle">
             <p class = "c7 devices">Devices tags</p>
         </div>
-        <p class="content">
+        <div class="ingredientContent">
             <table th:each="devices: ${recipe.getRecipeDevices()}">
                 <tr>
-                    <td th:text="'#' + ${devices.cookingDevice.getName()}"></td>
+                    <td>
+                        <a th:href="@{/allRecipes(device=${devices.cookingDevice.getName()})}" th:text="'#' + ${devices.cookingDevice.getName()}"></a>
+                    </td>
                 </tr>
             </table>
-        </p>
+        </div>
     </div>
     <form class="text-form">
         <img th:src="@{../images/quill.svg}" src="../../static/images/quill.svg" alt = "quill" class = "quill">
@@ -142,26 +144,28 @@
             <p class="frTitle">Recipe</p>
         </div>
         <div class="amountField">
-            <div class="ingredientsHeader">
-                <p class="iTitle">Ingredient Amount</p>
-            </div>
+            <div class="ingredientsHeader">Ingredient amount</div>
             <div class="amountContent">
                 <table th:each="ingedients: ${recipe.getRecipeIngredients()}">
                     <tr>
-                        <td><a th:href="@{/allRecipes(ingedient=${ingedients.ingredient.getName()})}"
-                               th:text="${ingedients.ingredient.getName()}"></a>
-                        </td>
+                        <td th:text="${ingedients.ingredient.getName()}"></td>
                         <td th:text="' - ' + ${ingedients.getAmountOfIngredient()}">
                         </td>
                     </tr>
                 </table>
             </div>
-            <div class="ingredientsHeader devisesHeader"></div>
-            <p class="iTitle dTitle">Deviсes</p>
+            <div class="ingredientsHeader devicesHeader">Cooking devices</div>
+            <div class="amountContent">
+                <table th:each="devices: ${recipe.getRecipeDevices()}">
+                    <tr>
+                        <td th:text="${devices.cookingDevice.getName()}"></td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <div class="stepByStepField" th:text="${recipe.getDescription()}">
-            <div class="stepByStepHeader"></div>
-            <p class="iTitle sbsTitle">Step-by-step instructions</p>
+        <div class="stepByStepField">
+            <div class="ingredientsHeader stepByStepHeader">Step-by-step instructions</div>
+            <div class="amountContent" th:text="${recipe.getDescription()}"></div>
         </div>
     </div>
     <div class="addRatingField">
