--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -14,7 +14,9 @@
 
         <form class="search-form">
             <img th:src="@{../images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
-            <input name="query" placeholder="Search" type="search">
+            <label>
+                <input name="query" placeholder="Search" type="search">
+            </label>
         </form>
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
         <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
@@ -69,8 +71,10 @@
     <div class = "RecipeTitle">
         <p class="c3" th:text="${recipe.getTitle()}">Pancakes</p>
     </div>
-    <div class = "RecipeRating">
-        <p class = "num" th:text="${recipe.getAverageMark()}">8.8</p>
+    <div class="RecipeRating">
+        <a th:href="@{/allRecipes(rating=${recipe.getAverageMark()})}">
+            <p class="num" th:text="${recipe.getAverageMark()}">8.8</p>
+        </a>
     </div>
     <div class = "FavoriteList">
         <p class = "c4">Favorite list</p>
@@ -95,7 +99,7 @@
                 <table th:each="ingedients: ${recipe.getRecipeIngredients()}">
                     <tr>
                         <td>
-                            <a th:href="${ingedients.ingredient.getName()}" th:text="'#' + ${ingedients.ingredient.getName()}"></a>
+                            <a th:href="@{/allRecipes(ingredient=${ingedients.ingredient.getName()})}" th:text="'#' + ${ingedients.ingredient.getName()}"></a>
                         </td>
                     </tr>
                 </table>
@@ -118,25 +122,29 @@
     </div>
     <form class="text-form">
         <img th:src="@{../images/quill.svg}" src="../../static/images/quill.svg" alt = "quill" class = "quill">
-        <input name="query" placeholder="Add comment" type="text">
+        <label>
+            <input name="startWith" placeholder="Add comment" type="text">
+        </label>
         <div class="publish">
             <p class = "c8">Publish</p>
         </div>
     </form>
-    <div class = "commentField">
-        <div class = "comment">
-            <div class = "commentIcon">
+    <div class="commentField">
+        <<div th:each="comment, commentStat : ${recipe.getComments()}"
+              th:class="${commentStat.first} ? 'comment comment' : 'comment comment' + ${commentStat.count}">
+            <div class="comment-user-circle">
+                <img id="comment-user" src="../../images/Chef Hat.svg" alt="comment-user" class="comment-user">
             </div>
-        </div>
-        <div class = " comment comment2">
-            <div class = "commentIcon">
-            </div>
-        </div>
-        <div class = "comment comment3">
-            <div class = "commentIcon">
-            </div>
+            <table>
+                <tbody>
+                <tr>
+                    <td th:text="${comment.getText()}"></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
+
     <div class = "stick stick2"></div>
 
     <div class="fullRecipe">
@@ -215,7 +223,9 @@
 
     <div class="window" id="popup-window">
         <div class="inner-window">
-            <input name="query" placeholder="Enter feedback" type="search">
+            <label>
+                <input name="query" placeholder="Enter feedback" type="search">
+            </label>
         </div>
 
         <button id="send-button">Send</button>
