--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>All recipes</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/allRecipes.css" th:href="@{css/allRecipes.css}">
+    <link href="../../static/css/allRecipes.css" rel="stylesheet" th:href="@{css/allRecipes.css}" type="text/css">
 </head>
 <body>
 <header>
     <div class="header">
-        <img th:src="@{images/logo.svg}" src="../../static/images/logo.svg" alt = "logo" class = "logo">
+        <img alt="logo" class="logo" src="../../static/images/logo.svg" th:src="@{images/logo.svg}">
 
         <form class="search-form">
-            <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
+            <img alt="magnifier" class="magnifier" src="../../static/images/magnifier.svg"
+                 th:src="@{images/magnifier.svg}">
             <input name="query" placeholder="Search" type="search">
         </form>
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
@@ -19,63 +20,75 @@
 
         <div class="heart-container">
             <div class="heart"
-                 onmouseover="changeImage('heart-img', '../../images/heart-hover.svg')"
-                 onmouseout="restoreImage('heart-img', '../../images/heart.svg')">
-                <img id="heart-img" th:src="@{images/heart.svg}" src="../../images/heart.svg" alt="heart" class="heart">
+                 onmouseout="restoreImage('heart-img', '../../images/heart.svg')"
+                 onmouseover="changeImage('heart-img', '../../images/heart-hover.svg')">
+                <img alt="heart" class="heart" id="heart-img" src="../../images/heart.svg" th:src="@{images/heart.svg}">
             </div>
         </div>
 
         <div class="user-container">
             <div class="user"
-                 onmouseover="changeImage('user-img', '../../images/user-hover.svg')"
-                 onmouseout="restoreImage('user-img', '../../images/user.svg')">
+                 onmouseout="restoreImage('user-img', '../../images/user.svg')"
+                 onmouseover="changeImage('user-img', '../../images/user-hover.svg')">
 
-                <img id="user-img" th:src="@{images/user.svg}" src="../../images/user.svg" alt="user" class="user">
+                <img alt="user" class="user" id="user-img" src="../../images/user.svg" th:src="@{images/user.svg}">
             </div>
         </div>
 
-        <a th:href="@{/}" href="main.html">
-            <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
+        <a href="main.html" th:href="@{/}">
+            <img alt="home" class="home" src="../../images/home.svg" th:src="@{images/home.svg}">
         </a>
     </div>
 </header>
 
 <main>
-    <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
+    <img alt="board" class="board" src="../../static/images/CuttingBoard.svg" th:src="@{images/CuttingBoard.svg}">
     <button class="apply-button"><span>Apply</span></button>
     <div class="ulBoard">
         <ul>
             <h1 class="h1">Filters</h1>
-            <li><img alt="categoriesI" class="categoriesI" th:src="@{images/Categories.svg}"  src="../../static/images/Categories.svg" >
-                Categories</li>
+            <li><img alt="categoriesI" class="categoriesI" src="../../static/images/Categories.svg"
+                     th:src="@{images/Categories.svg}">
+                Categories
+            </li>
             <hr>
-            <li><img alt="timeI" class="timeI" th:src="@{images/Time.svg}" src="../../static/images/Time.svg" >
-                Time</li>
+            <li><img alt="timeI" class="timeI" src="../../static/images/Time.svg" th:src="@{images/Time.svg}">
+                Time
+            </li>
             <hr>
-            <li><img alt="alphabetI" class="alphabetI" th:src="@{images/Alphabet.svg}" src="../../static/images/Alphabet.svg" >
-                Alphabet</li>
+            <li><img alt="alphabetI" class="alphabetI" src="../../static/images/Alphabet.svg"
+                     th:src="@{images/Alphabet.svg}">
+                Alphabet
+            </li>
             <hr>
-            <li><img alt="ratingI" class="ratingI" th:src="@{images/Rating.svg}" src="../../static/images/Rating.svg" >
-                Rating</li>
+            <li><img alt="ratingI" class="ratingI" src="../../static/images/Rating.svg" th:src="@{images/Rating.svg}">
+                Rating
+            </li>
             <hr>
-            <li><img alt="ingredientsI" class="ingredientsI" th:src="@{images/ingredients.svg}" src="../../static/images/ingredients.svg" >
-                Ingredients</li>
+            <li><img alt="ingredientsI" class="ingredientsI" src="../../static/images/ingredients.svg"
+                     th:src="@{images/ingredients.svg}">
+                Ingredients
+            </li>
             <hr>
-            <li><img alt="devicesI" class="devicesI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
-                Devices</li>
+            <li><img alt="devicesI" class="devicesI" src="../../static/images/Mixer.svg" th:src="@{images/Mixer.svg}">
+                Devices
+            </li>
             <hr>
-            <li><img alt="ingredientsI" class="ingredientsI" th:src="@{images/ingredients.svg}" src="../../static/images/ingredients.svg" >
-                Ingredients</li>
+            <li><img alt="ingredientsI" class="ingredientsI" src="../../static/images/ingredients.svg"
+                     th:src="@{images/ingredients.svg}">
+                Ingredients
+            </li>
             <hr>
-            <li><img alt="devicesI" class="devicesI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
-                Devices</li>
+            <li><img alt="devicesI" class="devicesI" src="../../static/images/Mixer.svg" th:src="@{images/Mixer.svg}">
+                Devices
+            </li>
         </ul>
     </div>
-    <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
+    <img alt="coffeeBean" class="bean" src="../../static/images/coffeeBean.svg" th:src="@{images/coffeeBean.svg}">
     <div class="mainField">
-        <div class="field" id="recipeContainer"  th:if="${recipes.size()!=0}">
+        <div class="field" id="recipeContainer" th:if="${recipes.size()!=0}">
             <div class="ol">
-                <div th:each="recipe, i : ${recipes}" th:class="'smallerField smallerField-down' + (${i.index} + 1)">
+                <div th:class="'smallerField smallerField-down' + (${i.index} + 1)" th:each="recipe, i : ${recipes}">
                     <table>
                         <tr>
                             <th th:text="${recipe.getCategory().getTitle()}"></th>
@@ -116,23 +129,24 @@
     <div class="circle-container telegram-container">
         <div
                 class="telegram"
-                onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')"
                 onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
+                onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')"
         >
-            <img id="telegram-img" th:src="@{images/telegram.svg}"  src="../../images/telegram.svg" alt="telegram" class="telegram">
+            <img alt="telegram" class="telegram" id="telegram-img" src="../../images/telegram.svg"
+                 th:src="@{images/telegram.svg}">
         </div>
     </div>
 
     <div class="circle-container instagram-container">
         <div
                 class="instagram"
-                onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')"
                 onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
+                onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')"
         >
-            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../images/inst.svg" class="instagram">
+            <img class="instagram" id="instagram-img" src="../../images/inst.svg" th:src="@{images/inst.svg}">
         </div>
     </div>
 </footer>
-<script th:href="@{js/scripts.js}" src="../../js/scripts.js"></script>
+<script src="../../js/scripts.js" th:href="@{js/scripts.js}"></script>
 </body>
 </html>
