--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -46,9 +46,9 @@
 <div class="container">
     <div class="menu">
         <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
+        <h1 class="boardOneTitle">Categories</h1>
         <div class="ul">
             <ul>
-                <h1 class="h1">Categories</h1>
                 <a th:href="@{/allRecipes(category= Soup )}">
                     <li>
                         <img alt="substance" class="substance" th:src="@{https://i.imgur.com/zphkXzb.png}" src="https://i.imgur.com/zphkXzb.png">
@@ -58,9 +58,11 @@
 <!--                    First dishes</li>-->
                 </a>
                 <hr>
+                <a th:href="@{/allRecipes(category= Soup )}">
                 <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
                     Main dishes</li>
                 <hr>
+                </a>
                 <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
                     Salads</li>
                 <hr>
