--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -58,29 +58,41 @@
 <!--                    First dishes</li>-->
                 </a>
                 <hr>
-                <a th:href="@{/allRecipes(category= Soup )}">
+                <a th:href="@{/allRecipes(category= MainDish)}">
                 <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
                     Main dishes</li>
                 <hr>
                 </a>
+                <a th:href="@{/allRecipes(category= Salad )}">
                 <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
                     Salads</li>
                 <hr>
+                </a>
+                <a th:href="@{/allRecipes(category= Pastry )}">
                 <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/PastryI.svg" >
                     Pastry</li>
                 <hr>
+                </a>
+                <a th:href="@{/allRecipes(category= Desserts )}">
                 <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >
                     Desserts</li>
                 <hr>
+                </a>
+                <a th:href="@{/allRecipes(category= Drinks )}">
                 <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >
                     Drinks</li>
                 <hr>
+                </a>
+                <a th:href="@{/allRecipes(category= Snacks )}">
                 <li><img alt="snackI" class="snackI" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
                     Snacks</li>
+                </a>
                 <hr>
+                <a th:href="@{/allRecipes(category= FishDishes )}">
                 <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >
                     Fish dishes</li>
                 <hr>
+                </a>
                 <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/SauceSelection.svg" >
                     Sauces</li>
                 <hr>
