--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -58,7 +58,7 @@
 <!--                    First dishes</li>-->
                 </a>
                 <hr>
-                <a th:href="@{/allRecipes(category= MainDish)}">
+                <a th:href="@{/allRecipes(category= Main+dish)}">
                 <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
                     Main dishes</li>
                 <hr>
