--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -14,9 +14,7 @@
 
         <form class="search-form">
             <img th:src="@{../images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
-            <label>
                 <input name="query" placeholder="Search" type="search">
-            </label>
         </form>
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
         <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
@@ -122,15 +120,15 @@
     </div>
     <form class="text-form">
         <img th:src="@{../images/quill.svg}" src="../../static/images/quill.svg" alt = "quill" class = "quill">
-        <label>
+
             <input name="startWith" placeholder="Add comment" type="text">
-        </label>
+
         <div class="publish">
             <p class = "c8">Publish</p>
         </div>
     </form>
     <div class="commentField">
-        <<div th:each="comment, commentStat : ${recipe.getComments()}"
+        <div th:each="comment, commentStat : ${recipe.getComments()}"
               th:class="${commentStat.first} ? 'comment comment' : 'comment comment' + ${commentStat.count}">
             <div class="comment-user-circle">
                 <img id="comment-user" src="../../images/Chef Hat.svg" alt="comment-user" class="comment-user">
